[package]
name = "msal_example"
version = "0.1.0"
edition = "2021"

[dependencies]
libhimmelblau = { version = "0.6.20", features = ["developer", "on_behalf_of"] }
tokio = { version = "1.35.1", features = ["full"] }
openssl = "0.10.62"
uuid = { version = "^1.4.1", features = [ "v4" ] }
num-traits = "^0.2.17"
kanidm-hsm-crypto = { version = "^0.2.0", features = ["msextensions"] }
rpassword = "7.3.1"
anyhow = "1.0.83"
reqwest = "0.12.4"
serde = "1.0.200"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
sha2 = "0.10.8"
authenticator = { version = "0.4.1", default-features = false, features = ["crypto_openssl"] }
base64 = "0.22.1"
serde_json = "1.0.132"
